Update Designs for New Step

--- a/inverter/config.json
+++ b/inverter/config.json
@@ -3,7 +3,7 @@
         "version": 2,
         "flow": [
             "Yosys.Synthesis",
-            "Misc.LoadBaseSDC",
+            "OpenROAD.CheckSDCFiles",
             "OpenROAD.Floorplan",
             "OpenROAD.TapEndcapInsertion",
             "OpenROAD.GeneratePDN",
