--- a/aes_core/config.json
+++ b/aes_core/config.json
@@ -7,6 +7,7 @@
     "GPL_CELL_PADDING": 4,
     "DPL_CELL_PADDING": 4,
     "GLB_RESIZER_HOLD_MAX_BUFFER_PERCENT": 60,
+    "PL_TARGET_DENSITY": 0.4,
     "pdk::sky130*": {
         "SYNTH_MAX_FANOUT": 6,
         "FP_CORE_UTIL": 25,
