disable postgrt repair design optimizations for designs with no logic at the top level

--- a/caravel_upw/config.json
+++ b/caravel_upw/config.json
@@ -116,5 +116,6 @@
     "MAGIC_DEF_LABELS": false,
     "QUIT_ON_SYNTH_CHECKS": false,
     "MAGIC_DRC_USE_GDS": true,
-    "RUN_LINTER": false
+    "RUN_LINTER": false,
+    "RUN_POST_GRT_RESIZER_TIMING": false
 }
