--- a/caravel_upw/config.json
+++ b/caravel_upw/config.json
@@ -117,5 +117,6 @@
     "QUIT_ON_SYNTH_CHECKS": false,
     "MAGIC_DRC_USE_GDS": true,
     "RUN_LINTER": false,
-    "RUN_POST_GRT_RESIZER_TIMING": false
+    "RUN_POST_GRT_RESIZER_TIMING": false,
+    "RUN_POST_GRT_REPAIR_DESIGN": false
 }
