--- a/io_placer/config.json
+++ b/io_placer/config.json
@@ -81,5 +81,7 @@
     "CLOCK_TREE_SYNTH": 0,
     "QUIT_ON_SYNTH_CHECKS": false,
     "QUIT_ON_MAGIC_DRC": false,
-    "RUN_POST_GRT_RESIZER_TIMING": false
+    "RUN_LINTER": false,
+    "RUN_POST_GRT_RESIZER_TIMING": false,
+    "RUN_POST_GRT_REPAIR_DESIGN": false
 }
