--- a/aes_core/config.json
+++ b/aes_core/config.json
@@ -6,7 +6,7 @@
     "DIODE_INSERTION_STRATEGY": 4,
     "GPL_CELL_PADDING": 4,
     "DPL_CELL_PADDING": 4,
-    "GLB_RESIZER_HOLD_MAX_BUFFER_PERCENT": 60,
+    "RUN_POST_GRT_RESIZER_TIMING": false,
     "PL_TARGET_DENSITY": 0.4,
     "pdk::sky130*": {
         "SYNTH_MAX_FANOUT": 6,
