--- a/aes_core/config.json
+++ b/aes_core/config.json
@@ -6,7 +6,8 @@
     "DIODE_INSERTION_STRATEGY": 4,
     "GPL_CELL_PADDING": 4,
     "DPL_CELL_PADDING": 4,
-    "RUN_POST_GRT_RESIZER_TIMING": false,
+    "RUN_POST_GRT_RESIZER_TIMING": true,
+    "RUN_POST_GRT_DESIGN_REPAIR": true,
     "PL_TARGET_DENSITY": 0.4,
     "pdk::sky130*": {
         "SYNTH_MAX_FANOUT": 6,
