--- a/spm/config.json
+++ b/spm/config.json
@@ -10,6 +10,8 @@
     "FP_PDN_HOFFSET": 7,
     "FP_PDN_SKIPTRIM": true,
     "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
+    "RUN_POST_GRT_RESIZER_TIMING": true,
+    "RUN_POST_GRT_DESIGN_REPAIR": true,
     "pdk::sky130*": {
         "FP_CORE_UTIL": 45,
         "scl::sky130_fd_sc_hd": {
