--- a/inverter/config.json
+++ b/inverter/config.json
@@ -24,7 +24,7 @@
     "VERILOG_FILES": "dir::src/*.v",
     "CLOCK_PORT": null,
     "FP_SIZING": "absolute",
-    "DIE_AREA": "0 0 34.5 57.12",
+    "DIE_AREA": [0, 0, 34.5, 57.12],
     "PL_TARGET_DENSITY": 0.75,
     "FP_PDN_AUTO_ADJUST": false,
     "FP_PDN_VPITCH": 25,
