--- a/spm/config.json
+++ b/spm/config.json
@@ -36,5 +36,13 @@
         "FP_CORE_UTIL": 40,
         "SYNTH_MAX_FANOUT": 4,
         "PL_TARGET_DENSITY": 0.5
-    }
+    },
+    "FP_OBSTRUCTIONS": [
+        [
+            40,
+            40,
+            60,
+            60
+        ]
+    ]
 }
