Fix config for `user_proj_timer` (#12)
* Not compatible with `QUIT_ON_UNMATCHED_IO` being true

--- a/user_proj_timer/config.json
+++ b/user_proj_timer/config.json
@@ -11,6 +11,7 @@
     "FP_SIZING": "absolute",
     "DIE_AREA": "0 0 200 3500",
     "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
+    "QUIT_ON_UNMATCHED_IO": 0,
     "MAX_TRANSITION_CONSTRAINT": 1.0,
     "MAX_FANOUT_CONSTRAINT": 16,
     "PL_TARGET_DENSITY": 0.55,
