--- a/aes_core/config.json
+++ b/aes_core/config.json
@@ -4,19 +4,22 @@
     "CLOCK_PORT": "clk",
     "CLOCK_NET": "clk",
     "DIODE_INSERTION_STRATEGY": 4,
-    "GPL_CELL_PADDING": 2,
-    "DPL_CELL_PADDING": 2,
-    "RUN_POST_GRT_RESIZER_TIMING": true,
-    "RUN_POST_GRT_DESIGN_REPAIR": true,
-    "PL_TARGET_DENSITY": 0.38,
+    "GPL_CELL_PADDING": 4,
+    "DPL_CELL_PADDING": 4,
+    "GLB_RESIZER_HOLD_MAX_BUFFER_PERCENT": 60,
     "pdk::sky130*": {
-        "SYNTH_MAX_FANOUT": 6,
+        "MAX_FANOUT_CONSTRAINT": 6,
         "FP_CORE_UTIL": 25,
         "CLOCK_PERIOD": 21.28,
         "scl::sky130_fd_sc_hd": {
             "CLOCK_PERIOD": 22,
             "FP_CORE_UTIL": 25,
-            "PL_RESIZER_HOLD_SLACK_MARGIN": 0.25
+            "PL_RESIZER_HOLD_SLACK_MARGIN": 0.25,
+            "SYNTH_ABC_LEGACY_REFACTOR": true,
+            "SYNTH_ABC_LEGACY_REWRITE": true,
+            "GRT_ADJUSTMENT": 0.1,
+            "GRT_ANT_MARGIN": 20,
+            "PL_TARGET_DENSITY": 0.4
         }
     }
 }
