--- a/salsa20/config.json
+++ b/salsa20/config.json
@@ -6,14 +6,17 @@
     "GLB_RESIZER_TIMING_OPTIMIZATIONS": true,
     "GPL_CELL_PADDING": 4,
     "DPL_CELL_PADDING": 4,
+    "RUN_HEURISTIC_DIODE_INSERTION": true,
+    "DIODE_ON_PORTS": "in",
     "FP_CORE_UTIL": 20,
+    "LINTER_ERROR_ON_LATCH": false,
     "pdk::sky130*": {
-        "SYNTH_MAX_FANOUT": 6,
+        "MAX_FANOUT_CONSTRAINT": 6,
         "CLOCK_PERIOD": 36.73,
         "scl::sky130_fd_sc_hd": {
             "CLOCK_PERIOD": 38,
-            "PL_RESIZER_HOLD_SLACK_MARGIN": 0.25
+            "PL_RESIZER_HOLD_SLACK_MARGIN": 0.25,
+            "PL_TARGET_DENSITY": 0.32
         }
-    },
-    "LINTER_ERROR_ON_LATCH": false
+    }
 }
