Set `PL_TARGET_DENSITY_PCT` explicitly for some designs (#17)
  * Explicitly set `PL_TARGET_DENSITY_PCT` to the value based of old calculation method as some designs had negative metric changes.

--- a/MS_DMAC_AHBL/config.json
+++ b/MS_DMAC_AHBL/config.json
@@ -5,5 +5,6 @@
     "CLOCK_PERIOD": 10,
     "FP_IO_MODE": "annealing",
     "FP_IO_MIN_DISTANCE": 2,
-    "FP_CORE_UTIL": 70
+    "FP_CORE_UTIL": 70,
+    "PL_TARGET_DENSITY_PCT": 80
 }
