--- a/MS_SPI_XIP_CACHE/config.json
+++ b/MS_SPI_XIP_CACHE/config.json
@@ -7,5 +7,6 @@
     "CLOCK_PORT": "HCLK",
     "CLOCK_PERIOD": 10,
     "FP_IO_MODE": "annealing",
+    "PL_TARGET_DENSITY_PCT": 75,
     "FP_CORE_UTIL": 65
 }
