--- a/blink/config.json
+++ b/blink/config.json
@@ -9,5 +9,6 @@
     "CLOCK_PORT": "clk",
     "FP_PDN_VOFFSET": 7,
     "FP_PDN_HOFFSET": 7,
-    "FP_PDN_SKIPTRIM": true
+    "FP_PDN_SKIPTRIM": true,
+    "PL_TARGET_DENSITY_PCT": 60
 }
