--- a/y_huff/config.json
+++ b/y_huff/config.json
@@ -8,16 +8,16 @@
     "GPL_CELL_PADDING": 4,
     "DPL_CELL_PADDING": 4,
     "FP_CORE_UTIL": 25,
+    "QUIT_ON_SYNTH_CHECKS": false,
+    "CLOCK_PERIOD": 11.35,
     "pdk::sky130*": {
         "FP_SIZING": "absolute",
         "DIE_AREA": "0 0 700 700",
-        "CLOCK_PERIOD": 11.35,
         "MAX_FANOUT_CONSTRAINT": 6
     },
     "pdk::gf180mcu*": {
-        "DIODE_INSERTION_STRATEGY": 3,
         "MAX_FANOUT_CONSTRAINT": 10,
-        "RUN_HEURISTIC_DIODE_INSERTION": 0,
+        "RUN_HEURISTIC_DIODE_INSERTION": false,
         "CLOCK_WIRE_RC_LAYER": "Metal2",
         "PL_RESIZER_HOLD_SLACK_MARGIN": 0.05,
         "GLB_RESIZER_HOLD_SLACK_MARGIN": 0.01,
