--- a/usb_cdc_core/config.json
+++ b/usb_cdc_core/config.json
@@ -13,6 +13,7 @@
         }
     },
     "pdk::gf180mcu*": {
+        "PL_RESIZER_HOLD_SLACK_MARGIN": 0.2,
         "DIODE_INSERTION_STRATEGY": 6,
         "GPL_CELL_PADDING": 4,
         "DPL_CELL_PADDING": 4,
