Updates to account for default of `SYNTH_ABC_BUFFERING` changing (#21)
* lower utilization to fix congestion

* restore SYNTH_ABC_BUFFERING for some designs that performed worse when variable was truned off

---------

Co-authored-by: Kareem Farid <kareefardi@users.noreply.github.com>

--- a/MS_SPI_XIP_CACHE/config.json
+++ b/MS_SPI_XIP_CACHE/config.json
@@ -8,5 +8,6 @@
     "CLOCK_PERIOD": 10,
     "FP_IO_MODE": "annealing",
     "PL_TARGET_DENSITY_PCT": 75,
-    "FP_CORE_UTIL": 65
+    "FP_CORE_UTIL": 65,
+    "SYNTH_ABC_BUFFERING": true
 }
