--- a/blink/config.json
+++ b/blink/config.json
@@ -10,5 +10,6 @@
     "FP_PDN_VOFFSET": 7,
     "FP_PDN_HOFFSET": 7,
     "FP_PDN_SKIPTRIM": true,
-    "PL_TARGET_DENSITY_PCT": 60
+    "PL_TARGET_DENSITY_PCT": 60,
+    "SYNTH_ABC_BUFFERING": true
 }
