--- a/MS_DMAC_AHBL/config.json
+++ b/MS_DMAC_AHBL/config.json
@@ -6,5 +6,6 @@
     "FP_IO_MODE": "annealing",
     "FP_IO_MIN_DISTANCE": 2,
     "FP_CORE_UTIL": 70,
-    "PL_TARGET_DENSITY_PCT": 80
+    "PL_TARGET_DENSITY_PCT": 80,
+    "SYNTH_ABC_BUFFERING": true
 }
