--- a/usb_cdc_core/config.json
+++ b/usb_cdc_core/config.json
@@ -7,6 +7,7 @@
         "CLOCK_PERIOD": 15.6,
         "FP_CORE_UTIL": 45,
         "SYNTH_MAX_FANOUT": 6,
+        "PL_RESIZER_HOLD_SLACK_MARGIN": 0.25,
         "scl::sky130_fd_sc_hd": {
             "FP_CORE_UTIL": 30,
             "PL_TARGET_DENSITY": 0.32
