--- a/EF_UART/config.json
+++ b/EF_UART/config.json
@@ -6,5 +6,6 @@
     "CLOCK_PORT": "clk",
     "CLOCK_PERIOD": 10,
     "SIGNOFF_SDC_FILE": "dir::../.common/signoff.sdc",
-    "FP_CORE_UTIL": 71
+    "FP_CORE_UTIL": 70,
+    "SYNTH_STRATEGY": "AREA 1"
 }
