MS_SPI_XIP_CACHE: Disable SYNTH_ABC_BUFFERING to fix hold (#33)
Signed-off-by: Kareem Farid <kareefardi@users.noreply.github.com>
Co-authored-by: Kareem Farid <kareefardi@users.noreply.github.com>

--- a/MS_SPI_XIP_CACHE/config.json
+++ b/MS_SPI_XIP_CACHE/config.json
@@ -9,5 +9,5 @@
     "FP_IO_MODE": "annealing",
     "PL_TARGET_DENSITY_PCT": 75,
     "FP_CORE_UTIL": 55,
-    "SYNTH_ABC_BUFFERING": true
+    "SYNTH_ABC_BUFFERING": false
 }
