--- a/regs_analog_ctrl_APB/config.yaml
+++ b/regs_analog_ctrl_APB/config.yaml
@@ -1,51 +1,40 @@
-{
-    "DESIGN_NAME": "regs_analog_ctrl_APB",
-    "FP_PDN_SKIPTRIM": true,
-    "DESIGN_IS_CORE": false,
-    "VERILOG_FILES": [
-        "dir::regs_analog_ctrl_APB.v",
-	    "dir::regs_analog_ctrl.v"
-    ],
-    "PNR_SDC_FILE":"dir::base.sdc",
-    "CLOCK_PORT":"PCLK",
-    "SIGNOFF_SDC_FILE":"dir::signoff.sdc", 
-    "ERROR_ON_SYNTH_CHECKS": false,
-    "DRT_THREADS": 16,
-    "FP_SIZING": "absolute",
-    "DIE_AREA": [0, 0, 1605, 105],
-    "CORE_AREA": [5, 5, 1600, 100],
-    "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
-    "PL_TARGET_DENSITY_PCT": 25,
-
-    "GPL_CELL_PADDING": 3,
-    "MAX_FANOUT_CONSTRAINT": 16,
-    
-
-    "PL_WIRE_LENGTH_COEF": 0.1,
-    "PL_ROUTABILITY_DRIVEN": true,
-    "MAGIC_DEF_LABELS": false,
-    "GRT_ADJUSTMENT": 0.05,
-    "RT_MAX_LAYER": "met3",
-    "VDD_NETS": [
-        "vccd0"
-    ],
-    "GND_NETS": [
-        "vssd0"
-    ],
-    "GRT_ALLOW_CONGESTION": true,
-    "DIODE_ON_PORTS": "both",
-    "RUN_HEURISTIC_DIODE_INSERTION": true,
-    "GRT_REPAIR_ANTENNAS": true,
-    "HEURISTIC_ANTENNA_THRESHOLD": 200,
-    "TOP_MARGIN_MULT": 2,
-    "BOTTOM_MARGIN_MULT": 2,
-    "PDN_OBSTRUCTIONS": [
-        [met4,1090,0,1180,105]
-    ],
-    "ROUTING_OBSTRUCTIONS": [
-        [met4,1090,0,1180,105]
-    ],
-    "DEFAULT_CORNER": "max_ss_100C_1v60",
-    "DESIGN_REPAIR_MAX_WIRE_LENGTH": 1200,
-    "PL_KEEP_RESIZE_BELOW_OVERFLOW": 0
-}
+DESIGN_NAME: regs_analog_ctrl_APB
+FP_PDN_SKIPTRIM: true
+DESIGN_IS_CORE: false
+VERILOG_FILES:
+  - dir::regs_analog_ctrl_APB.v
+  - dir::regs_analog_ctrl.v
+PNR_SDC_FILE: dir::base.sdc
+CLOCK_PORT: PCLK
+SIGNOFF_SDC_FILE: dir::signoff.sdc
+ERROR_ON_SYNTH_CHECKS: false
+FP_SIZING: absolute
+DIE_AREA: [0, 0, 1605, 105]
+CORE_AREA: [5, 5, 1600, 100]
+FP_PIN_ORDER_CFG: dir::pin_order.cfg
+PL_TARGET_DENSITY_PCT: 26
+GPL_CELL_PADDING: 2
+MAX_FANOUT_CONSTRAINT: 16
+PL_WIRE_LENGTH_COEF: 0.15
+PL_ROUTABILITY_DRIVEN: true
+MAGIC_DEF_LABELS: false
+GRT_ADJUSTMENT: 0.05
+RT_MAX_LAYER: met3
+VDD_NETS:
+  - vccd0
+GND_NETS:
+  - vssd0
+GRT_ALLOW_CONGESTION: true
+DIODE_ON_PORTS: both
+RUN_HEURISTIC_DIODE_INSERTION: true
+GRT_REPAIR_ANTENNAS: true
+HEURISTIC_ANTENNA_THRESHOLD: 200
+TOP_MARGIN_MULT: 2
+BOTTOM_MARGIN_MULT: 2
+PDN_OBSTRUCTIONS:
+  - [met4, 1090, 0, 1180, 105]
+ROUTING_OBSTRUCTIONS:
+  - [met4, 1090, 0, 1180, 105]
+DEFAULT_CORNER: max_ss_100C_1v60
+DESIGN_REPAIR_MAX_WIRE_LENGTH: 1200
+PL_KEEP_RESIZE_BELOW_OVERFLOW: 0
