--- a/regs_analog_ctrl_APB/config.yaml
+++ b/regs_analog_ctrl_APB/config.yaml
@@ -1,10 +1,11 @@
 DESIGN_NAME: regs_analog_ctrl_APB
 FP_PDN_SKIPTRIM: true
-DESIGN_IS_CORE: false
+FP_PDN_MULTILAYER: false
 VERILOG_FILES:
   - dir::regs_analog_ctrl_APB.v
   - dir::regs_analog_ctrl.v
 PNR_SDC_FILE: dir::base.sdc
+SYNTH_STRATEGY: AREA 2
 CLOCK_PORT: PCLK
 SIGNOFF_SDC_FILE: dir::signoff.sdc
 ERROR_ON_SYNTH_CHECKS: false
@@ -12,13 +13,13 @@ FP_SIZING: absolute
 DIE_AREA: [0, 0, 1605, 105]
 CORE_AREA: [5, 5, 1600, 100]
 FP_PIN_ORDER_CFG: dir::pin_order.cfg
-PL_TARGET_DENSITY_PCT: 26
+PL_TARGET_DENSITY_PCT: 20
 GPL_CELL_PADDING: 2
 MAX_FANOUT_CONSTRAINT: 16
 PL_WIRE_LENGTH_COEF: 0.15
 PL_ROUTABILITY_DRIVEN: true
 MAGIC_DEF_LABELS: false
-GRT_ADJUSTMENT: 0.05
+GRT_ADJUSTMENT: 0
 RT_MAX_LAYER: met3
 VDD_NETS:
   - vccd0
