fix: Update io_place to use MACROS in config, add KLAYOUT_CONFLICT_RESOLUTION to aes_upw_old
Signed-off-by: Leo Moser <leomoser99@gmail.com>

--- a/aes_user_project_wrapper/config_old.json
+++ b/aes_user_project_wrapper/config_old.json
@@ -21,6 +21,7 @@
         "dir::spef/multicorner/aes_example.nom.spef.gz",
         "dir::spef/multicorner/aes_example.max.spef.gz"
     ],
+    "KLAYOUT_CONFLICT_RESOLUTION": "SkipNewCell",
     "BASE_SDC_FILE": "dir::base_user_project_wrapper.sdc",
     "IO_SYNC": 0,
     "FP_PDN_CHECK_NODES": 0,
